# nanorag

./: .gitignore  .gitmodules  CMakeLists.txt  COMPATIBILITY.md  LICENSE  QUALITY.md  README.md
.github/workflows/: ci.yml
cmake/: nanoragConfig.cmake.in
data/demo/: chunks.tsv  eval_hard_ood.tsv  eval_paraphrase.tsv  train_pairs.tsv
data/demo/eval/: README.md  refuse.tsv  retrieval.tsv  retrieval_hard.tsv
docs/: EMBEDDER_HARDNEG.md  HYBRID_RETRIEVAL.md
include/nanorag/: chunk_store.hpp  chunker.hpp  contrastive.hpp  embedder.hpp  eval.hpp  generate_chat.hpp  grounding.hpp  https_server.hpp  hybrid.hpp  json_util.hpp  pipeline.hpp  prompt.hpp  rag_service.hpp  text_util.hpp  word2vec.hpp
results/: hard_climb_results.xlsx
src/: main.cpp
tests/: test_chunker.cpp  test_embedder_store.cpp  test_eval_harness.cpp  test_generate_chat.cpp  test_grounding.cpp
